--- a/.github/workflows/main_terry-property-tool.yml
+++ b/.github/workflows/main_terry-property-tool.yml
@@ -1,78 +1,37 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-name: Build and deploy Python app to Azure Web App - terry-property-tool
-
+name: Deploy to Azure Web App - terry-property-tool
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+ push:
+   branches: [main]
+ workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+ build-and-deploy:
+   runs-on: ubuntu-latest
+   environment:
+     name: 'Production'
+     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+   permissions:
+     id-token: write
 
-    steps:
-      - uses: actions/checkout@v4
+   steps:
+   - uses: actions/checkout@v4
+   
+   - uses: actions/setup-python@v5
+     with:
+       python-version: '3.10'
 
-      - name: Set up Python version
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+   - run: pip install -r requirements.txt
+       
+   - run: zip release.zip ./* -r
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-app
-          path: |
-            release.zip
-            !venv/
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_00FBAAD139FC459A9B25C088EA690C9D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3BAF33A4F4A34BA1830C2B7BB0961D61 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_024331765DB3488798DD640935BC58B3 }}
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
-        with:
-          app-name: 'terry-property-tool'
-          slot-name: 'Production'
-          
+   - uses: azure/login@v2
+     with:
+       client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_00FBAAD139FC459A9B25C088EA690C9D }}
+       tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3BAF33A4F4A34BA1830C2B7BB0961D61 }}
+       subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_024331765DB3488798DD640935BC58B3 }}
+       
+   - uses: azure/webapps-deploy@v3
+     id: deploy-to-webapp
+     with:
+       app-name: 'terry-property-tool'
+       slot-name: 'Production'
